--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,25 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.idea/workspace.xml
+.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_3_0_Final.xml
+.idea/libraries/Maven__org_jboss_spec_javax_transaction_jboss_transaction_api_1_2_spec_1_0_1_Final.xml
+.idea/libraries/Maven__org_jboss_jandex_2_0_3_Final.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/libraries/Maven__org_hibernate_hibernate_core_5_2_9_Final.xml
+.idea/libraries/Maven__org_hibernate_hibernate_validator_5_4_1_Final.xml
+.idea/libraries/Maven__org_hibernate_common_hibernate_commons_annotations_5_0_1_Final.xml
+.idea/libraries/Maven__mysql_mysql_connector_java_5_1_4.xml
+.idea/libraries/Maven__org_hibernate_javax_persistence_hibernate_jpa_2_1_api_1_0_0_Final.xml
+.idea/libraries/Maven__org_javassist_javassist_3_20_0_GA.xml
+.idea/libraries/Maven__javax_validation_validation_api_1_1_0_Final.xml
+.idea/libraries/Maven__dom4j_dom4j_1_6_1.xml
+.idea/libraries/Maven__com_fasterxml_classmate_1_3_0.xml
+.idea/libraries/Maven__antlr_antlr_2_7_7.xml
+.idea/encodings.xml
+.idea/dataSources/af56610d-908b-46e0-9195-7e8040b6ae33.xml
+.idea/compiler.xml
+.idea/dataSources.local.xml
+.idea/dataSources.xml
+.idea/dataSources/25fa3bbe-c9cb-4929-a432-e6cbddb7e9fd.xml
